@@ -558,8 +558,30 @@ test basic-44.1 {Tcl_GlobalEval} {emptyTest} {
 test basic-45.1 {Tcl_SetRecursionLimit: see interp.test} {emptyTest} {
 } {}
 
-test basic-46.1 {Tcl_AllowExceptions} {emptyTest} {
-} {}
+test basic-46.1 {Tcl_AllowExceptions: exception return not allowed} {
+    catch {close $f}
+    set res [catch {
+	set f [open |[info nameofexecutable] w+]
+	fconfigure $f -buffering line
+	puts $f {fconfigure stdout -buffering line}
+	puts $f continue
+	puts $f {puts $errorInfo}
+	puts $f {puts DONE}
+	set newMsg {}
+	set msg {}
+	while {$newMsg != "DONE"} {
+	    set newMsg [gets $f]
+	    append msg "${newMsg}\n"
+	}
+	close $f
+    }]
+    list $res $msg   
+} {1 {invoked "continue" outside of a loop
+    while executing
+"continue
+"
+DONE
+}}
 
 # cleanup
 catch {eval namespace delete [namespace children :: test_ns_*]}
