@@ -1,3 +1,8 @@
+2002-03-22  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* tests/basic.test (basic-46.1): adding test for [Bug 533758],
+	fixed earlier today.
+	
 2002-03-22  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tclWinInt.h: moved undef of TCL_STORAGE_CLASS. [Bug #478579]
